# Float-Chat

./: .gitignore  README.md  dev.py  pyproject.toml  run.bat  start.py
.playwright-mcp/: page-2026-04-01T07-15-30-806Z.yml  page-2026-04-01T07-44-03-861Z.yml  page-2026-04-01T07-44-15-794Z.yml  page-2026-04-01T07-44-24-389Z.yml  page-2026-04-01T07-44-50-181Z.yml  page-2026-04-01T07-45-10-972Z.yml  page-2026-04-01T07-45-25-831Z.yml  page-2026-04-01T08-00-51-297Z.yml  page-2026-04-01T08-04-30-494Z.yml  page-2026-04-01T08-04-48-954Z.yml  page-2026-04-01T08-04-59-993Z.yml  page-2026-04-01T08-16-41-806Z.yml  page-2026-04-01T08-16-58-194Z.yml  page-2026-04-01T08-17-57-581Z.yml  page-2026-04-01T08-24-39-337Z.yml
algofloat/: __init__.py  cli.py
backend/: main.py
dashboard/: app.py  db.py
dashboard/chatbot/: gemini_client.py  graph.py  prompt.py
dashboard/pages/: 1_Overview.py  2_Map.py  3_Trends.py  4_Chatbot.py
dashboard/utils/: theme.py
data/: count.py  sample_argo.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css  plotlyTheme.js
frontend/src/components/: MetricCard.jsx  OceanMap.jsx  PageHeader.jsx  SectionHeader.jsx  Sidebar.css  Sidebar.jsx  Spinner.jsx
frontend/src/pages/: Chatbot.jsx  Home.jsx  MapPage.jsx  Overview.jsx  Trends.jsx
