[project]
name = "algofloat"
version = "0.1.0"
description = "AI-powered ARGO ocean float data dashboard"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "google-genai>=1.0.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
start = "algofloat.cli:start"
dev   = "algofloat.cli:dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["algofloat"]
